<resources>
    <string name="app_name">Future Savers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="referral_code">Referral Code</string>
    <string name="subscription">Subscription</string>
    <string name="personal_data">Personal Data</string>
    <string name="user_name">Krish</string>
    <string name="user_role">Software Engineer</string>
    <string name="help_text">We help you!</string>
    <string name="settings">Settings</string>
    <string name="enter_amount">Adjust amount</string>
    <string name="name">Name</string>
    <string name="occupation">Work</string>
    <string name="current_salary">Current Salary</string>
    <string name="scenario">Scenario</string>
    <string name="current_retirement_nest_egg">Current Retirement Nest Egg</string>
    <string name="average_annual_rate_of_return">Average Annual Rate of Return</string>
    <string name="yearly_contribution">Yearly Contribution</string>
    <string name="estimated_yearly_salary">Estimated Yearly Salary</string>
    <string name="number_of_years_to_retirement">Age of Retirement</string>
    <string name="desired_income_at_salary_active_years">Desired Salary Income after active years</string>
    <string name="salary_after_active_years">Salary After Active Years</string>
    <string name="change_image">Select New Picture</string>
    <string name="save">Save</string>
    <string name="date_of_birth">Birthday</string>
    <string name="slogan">Helping you plan ahead!</string>
    <string name="get_started">Get Started</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="let_s_get_to_know_you">Get to know you?</string>
    <string name="hello">Hey,</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="if_you_retire_at">If you retire at</string>
    <string name="_67_years_old">67 years old</string>
    <string name="congratulations">Congratulations!</string>
</resources>
