<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginSplash.LoginSplashActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/old_three"
        android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/colorPrimary"
        android:alpha="0.2"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:id="@+id/logo"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curve_top"
        android:backgroundTint="@color/white"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/curve_edges"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="16dp"
            android:id="@+id/getStartedBtn"/>
    </LinearLayout>

</RelativeLayout>